--- a/css/styles.css
+++ b/css/styles.css
@@ -222,6 +222,7 @@ p {
 }
 
 .feature-title {
+  display: block;
   padding-bottom: 10px;
   /* margin-top: 94px; */
   /* margin-bottom: 94px; */
@@ -231,9 +232,13 @@ p {
   display: block;
 }
 
+.button-filter,
 .section-title {
-  color: var(--title-text-color);
+  display: block;
+  padding-top: 94px;
+  padding-bottom: 50px;
 
+  color: var(--title-text-color);
   font-weight: 700;
   font-size: 36px;
   line-height: 1.16;
@@ -245,6 +250,10 @@ p {
   justify-content: center;
 }
 
+.button {
+  border-radius: 4px;
+}
+
 .filter-item:not(:last-child) {
   margin-right: 8px;
 }
@@ -252,6 +261,7 @@ p {
 .projects-cards {
   display: flex;
   flex-wrap: wrap;
+  padding-bottom: 94px;
 }
 
 /* .projects-item {
@@ -304,7 +314,8 @@ p {
 }
 
 .feature-list {
-  display: flex;
+  /* display: flex; */
+  padding-top: 94px;
 }
 
 .feature-text {
@@ -315,8 +326,10 @@ p {
 }
 
 .title-el {
-  color: var(--title-text-color);
+  padding-top: 30px;
+  padding-bottom: 10px;
 
+  color: var(--title-text-color);
   font-weight: 500;
   font-size: 16px;
   line-height: 1.19;
@@ -332,12 +345,48 @@ p {
 /* work */
 .work-cards {
   display: flex;
+  padding-bottom: 94px;
+}
+
+.work-item {
+  display: block;
+  width: calc((100%-60px) / 3);
+  margin-right: 30px;
+  margin-bottom: 30px;
+}
+
+.work-item:nth-last-child(-n + 3) {
+  margin-bottom: 0;
+}
+
+.work-item:nth-child(3n) {
+  margin-right: 0;
 }
 
 /* team */
+.team {
+  background-color: var(--button-background-color);
+}
 
 .team-cards {
+  display: block;
   display: flex;
+  padding-bottom: 94px;
+}
+
+.team-item {
+  display: block;
+  width: calc((100%-60px) / 4);
+  margin-right: 30px;
+  margin-bottom: 30px;
+}
+
+.team-item:last-child {
+  margin-right: 0px;
+}
+
+.team-item:nth-last-child(-n + 4) {
+  margin-bottom: 0px;
 }
 
 /* Button */
@@ -364,6 +413,17 @@ p {
 /*  section footer */
 .footer {
   background-color: var(--hero-background-color);
+}
+
+.footer-logo {
+  display: block;
+  padding-top: 60px;
+  padding-bottom: 20px;
+}
+
+.footer-item {
+  display: block;
+  padding-bottom: 60px;
 }
 
 .address {
