--- a/css/styles.css
+++ b/css/styles.css
@@ -7,6 +7,7 @@
   --button-background-color: #f5f4fa;
   --hero-background-color: #2f303a;
   --hero-button-focus-color: #188ce8;
+  --border-cards-color: #eeeeee;
   --auth-nav-footer-color: rgba(255, 255, 255, 0.6);
 }
 
@@ -22,11 +23,14 @@ html {
 
 body {
   margin: 0;
+  /* width: 1600px; */
 
   background: var(--primari-white-color);
   color: var(--primari-text-color);
   font-family: Roboto, sans-serif;
   letter-spacing: 0.03em;
+  /* box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2); */
 }
 
 ul {
@@ -46,10 +50,32 @@ p {
   margin-bottom: 0;
 }
 
+.container {
+  display: block;
+  width: 1200px;
+  padding-left: 15px;
+  padding-right: 15px;
+  padding-top: 94px;
+  padding-bottom: 94px;
+  margin-left: auto;
+  margin-right: auto;
+  /* outline: 2px solid #18e85d; */
+}
+.hidden {
+  position: absolute;
+  clip: rect(0 0 0 0);
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+}
+
 .header.container {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  padding-top: 0;
+  padding-bottom: 0;
+  border-bottom: 1px solid #ececec;
 }
 
 /* logo */
@@ -142,12 +168,12 @@ p {
 
 /* hero */
 .hero {
-  background-color: var(--hero-background-color);
-
   margin-top: 0;
   margin-bottom: 0;
   height: 600px;
   text-align: center;
+
+  background-color: var(--hero-background-color);
 }
 
 .hero-container {
@@ -155,6 +181,8 @@ p {
   width: 1200px;
   padding-left: 15px;
   padding-right: 15px;
+  padding-top: 200px;
+  padding-bottom: 200px;
   margin-right: auto;
   margin-left: auto;
 }
@@ -163,8 +191,7 @@ p {
   display: block;
   margin-left: auto;
   margin-right: auto;
-  padding-top: 200px;
-  padding-bottom: 30px;
+  margin-bottom: 30px;
   width: 696px;
 
   color: var(--primari-white-color);
@@ -174,10 +201,11 @@ p {
   line-height: 1.36;
 }
 .hero-button {
-  width: 200px;
+  min-width: 200px;
   height: 50px;
-  margin-bottom: 200px;
   border-radius: 4px;
+  padding-bottom: 10px;
+  padding-top: 10px;
 
   color: var(--primari-white-color);
   background-color: var(--accent-color);
@@ -195,15 +223,6 @@ p {
 }
 
 /* section */
-.container {
-  display: block;
-  width: 1200px;
-  padding-left: 15px;
-  padding-right: 15px;
-  margin-left: auto;
-  margin-right: auto;
-  outline: 2px solid #18e85d;
-}
 
 .feature-list {
   display: flex;
@@ -214,7 +233,7 @@ p {
   height: 101px;
   width: calc((100%-90px) / 4);
   margin-right: 30px;
-  outline: 2px solid red;
+  /* outline: 2px solid red; */
 }
 
 .feature-box:last-child {
@@ -232,10 +251,8 @@ p {
   display: block;
 }
 
-.button-filter,
-.section-title {
+.button-filter {
   display: block;
-  padding-top: 94px;
   padding-bottom: 50px;
 
   color: var(--title-text-color);
@@ -251,17 +268,31 @@ p {
 }
 
 .button {
+  border: var(--button-background-color);
   border-radius: 4px;
+  padding: 6px 22px;
 }
 
 .filter-item:not(:last-child) {
   margin-right: 8px;
 }
 
+.img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
+
+.projects-border {
+  border-bottom: 1px solid var(--border-cards-color);
+  border-left: 1px solid var(--border-cards-color);
+  border-right: 1px solid var(--border-cards-color);
+  padding: 20px 24px;
+}
+
 .projects-cards {
   display: flex;
   flex-wrap: wrap;
-  padding-bottom: 94px;
 }
 
 /* .projects-item {
@@ -270,23 +301,22 @@ p {
   margin-bottom: 30px;
 } */
 
-.projects-item:nth-child(3n) {
-  margin-right: 0;
-}
-
-.projects-item:nth-last-child(-n + 3) {
-  margin-bottom: 0px;
-}
-
 .projects-item {
   width: calc ((100%-60px)/3);
   margin-right: 30px;
   margin-bottom: 30px;
 }
+.projects-item:nth-child(3n) {
+  margin-right: 0;
+}
+.projects-item:nth-last-child(-n + 3) {
+  margin-bottom: 0px;
+}
 
 .projects-title {
-  color: var(--title-text-color);
+  padding-top: 4px;
 
+  color: var(--title-text-color);
   font-weight: 700;
   font-size: 18px;
   line-height: 2;
@@ -304,18 +334,16 @@ p {
 }
 
 .feature-title {
-  color: var(--title-text-color);
+  padding-bottom: 10px;
 
+  color: var(--title-text-color);
   font-weight: 700;
   font-size: 14px;
   line-height: 1.14;
-
-  padding-bottom: 10px;
 }
 
 .feature-list {
   /* display: flex; */
-  padding-top: 94px;
 }
 
 .feature-text {
@@ -325,24 +353,22 @@ p {
   line-height: 1.7;
 }
 
-.title-el {
-  padding-top: 30px;
-  padding-bottom: 10px;
+/* work */
+.container.work {
+  padding-top: 0;
+  padding-bottom: 0;
+}
+.section-title {
+  display: block;
+  padding-bottom: 50px;
 
   color: var(--title-text-color);
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.19;
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.16;
   text-align: center;
 }
 
-.title-el-text {
-  font-size: 16px;
-  line-height: 1.19;
-  text-align: center;
-}
-
-/* work */
 .work-cards {
   display: flex;
   padding-bottom: 94px;
@@ -371,7 +397,6 @@ p {
 .team-cards {
   display: block;
   display: flex;
-  padding-bottom: 94px;
 }
 
 .team-item {
@@ -387,6 +412,39 @@ p {
 
 .team-item:nth-last-child(-n + 4) {
   margin-bottom: 0px;
+}
+.title-el {
+  padding-bottom: 10px;
+
+  color: var(--title-text-color);
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.19;
+  text-align: center;
+}
+
+.title-el-text {
+  font-size: 16px;
+  line-height: 1.19;
+  text-align: center;
+}
+
+.team-border {
+  display: block;
+  background: #ffffff;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 0px 0px 4px 4px;
+  padding-top: 30px;
+  padding-bottom: 30px;
+  padding-left: auto;
+  padding-right: auto;
+}
+
+.team-img {
+  display: block;
+  max-width: 100%;
+  height: auto;
 }
 
 /* Button */
@@ -411,6 +469,11 @@ p {
 }
 
 /*  section footer */
+.footer.container {
+  padding-top: 0;
+  padding-bottom: 0;
+}
+
 .footer {
   background-color: var(--hero-background-color);
 }
@@ -418,9 +481,9 @@ p {
 .footer-logo {
   display: block;
   padding-top: 60px;
-  padding-bottom: 20px;
+  margin-bottom: 20px;
+  /* outline: 2px solid red; */
 }
-
 .footer-item {
   display: block;
   padding-bottom: 60px;
