--- a/css/styles.css
+++ b/css/styles.css
@@ -342,9 +342,9 @@ p {
   line-height: 1.14;
 }
 
-.feature-list {
-  /* display: flex; */
-}
+/* .feature-list {
+  display: flex;
+} */
 
 .feature-text {
   display: flex;
@@ -431,14 +431,15 @@ p {
 
 .team-border {
   display: block;
-  background: #ffffff;
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
-    0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
   padding-top: 30px;
   padding-bottom: 30px;
   padding-left: auto;
   padding-right: auto;
+
+  background: #ffffff;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
 }
 
 .team-img {
