--- a/css/styles.css
+++ b/css/styles.css
@@ -69,13 +69,15 @@ p {
   margin: -1px;
 }
 
+.header-blok {
+  border-bottom: 1px solid #ececec;
+}
 .header.container {
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding-top: 0;
   padding-bottom: 0;
-  border-bottom: 1px solid #ececec;
 }
 
 /* logo */
