--- a/css/styles.css
+++ b/css/styles.css
@@ -205,6 +205,7 @@ p {
 .hero-button {
   min-width: 200px;
   height: 50px;
+  border: transparent;
   border-radius: 4px;
   padding-bottom: 10px;
   padding-top: 10px;
@@ -270,7 +271,7 @@ p {
 }
 
 .button {
-  border: var(--button-background-color);
+  border: transparent;
   border-radius: 4px;
   padding: 6px 22px;
 }
