--- a/css/styles.css
+++ b/css/styles.css
@@ -50,8 +50,17 @@ p {
   margin-bottom: 0;
 }
 
-.container {
+a {
+  text-decoration: none;
+}
+
+img {
   display: block;
+  max-width: 100%;
+  height: auto;
+}
+
+.container {
   width: 1200px;
   padding-left: 15px;
   padding-right: 15px;
@@ -59,7 +68,6 @@ p {
   padding-bottom: 94px;
   margin-left: auto;
   margin-right: auto;
-  /* outline: 2px solid #18e85d; */
 }
 .hidden {
   position: absolute;
@@ -72,10 +80,9 @@ p {
 .header-blok {
   border-bottom: 1px solid #ececec;
 }
+
 .header.container {
   display: flex;
-  justify-content: space-between;
-  align-items: center;
   padding-top: 0;
   padding-bottom: 0;
 }
@@ -83,18 +90,17 @@ p {
 /* logo */
 .main-nav {
   display: flex;
+  align-items: center;
 }
 
 .logo {
-  padding-top: 24px;
-  margin-right: 90px;
+  margin-right: 93px;
 
   color: var(--logo-nav-color);
   font-family: Raleway, sans-serif;
-  font-weight: bold;
+  font-weight: 700;
   font-size: 26px;
   line-height: 1.19;
-  text-decoration: none;
 }
 
 .logo-web {
@@ -124,7 +130,6 @@ p {
   font-size: 14px;
   line-height: 1.33;
   letter-spacing: 0.02em;
-  text-decoration: none;
 }
 
 .site-nav-link:hover,
@@ -138,6 +143,7 @@ p {
 
 .auth-nav.list {
   display: flex;
+  align-items: center;
   margin-left: auto;
 }
 
@@ -148,13 +154,7 @@ p {
   font-size: 14px;
   line-height: 1.33;
   letter-spacing: 0.02em;
-  text-decoration: none;
 
-  padding-top: 32px;
-  padding-bottom: 32px;
-}
-
-.auth-nav-item {
   padding-top: 32px;
   padding-bottom: 32px;
 }
@@ -169,28 +169,20 @@ p {
 }
 
 /* hero */
+
 .hero {
-  margin-top: 0;
-  margin-bottom: 0;
-  height: 600px;
-  text-align: center;
-
   background-color: var(--hero-background-color);
-}
-
-.hero-container {
-  display: block;
-  width: 1200px;
-  padding-left: 15px;
-  padding-right: 15px;
   padding-top: 200px;
   padding-bottom: 200px;
-  margin-right: auto;
-  margin-left: auto;
+  text-align: center;
+}
+
+.hero > .container {
+  padding-top: 0;
+  padding-bottom: 0;
 }
 
 .hero-title {
-  display: block;
   margin-left: auto;
   margin-right: auto;
   margin-bottom: 30px;
@@ -232,58 +224,36 @@ p {
 }
 
 .feature-box {
-  display: block;
-  height: 101px;
-  width: calc((100%-90px) / 4);
+  flex-basis: calc((100%-90px) / 4);
   margin-right: 30px;
-  /* outline: 2px solid red; */
 }
 
 .feature-box:last-child {
   margin-right: 0px;
 }
 
-.feature-title {
-  display: block;
-  padding-bottom: 10px;
-  /* margin-top: 94px; */
-  /* margin-bottom: 94px; */
-}
-
 .feature-text {
-  display: block;
+  font-size: 14px;
+  line-height: 1.7;
 }
-
-.button-filter {
-  display: block;
-  padding-bottom: 50px;
+.feature-title {
+  margin-bottom: 10px;
 
   color: var(--title-text-color);
   font-weight: 700;
-  font-size: 36px;
-  line-height: 1.16;
-  text-align: center;
+  font-size: 14px;
+  line-height: 1.14;
 }
 
 .button-filter {
+  margin-bottom: 50px;
+
   display: flex;
   justify-content: center;
 }
 
-.button {
-  border: transparent;
-  border-radius: 4px;
-  padding: 6px 22px;
-}
-
 .filter-item:not(:last-child) {
   margin-right: 8px;
-}
-
-.img {
-  display: block;
-  max-width: 100%;
-  height: auto;
 }
 
 .projects-border {
@@ -298,14 +268,9 @@ p {
   flex-wrap: wrap;
 }
 
-/* .projects-item {
-  width: 370px;
-  margin-right: 30px;
-  margin-bottom: 30px;
-} */
-
 .projects-item {
-  width: calc ((100%-60px)/3);
+  display: block;
+  flex-basis: calc ((100%-60px) / 3);
   margin-right: 30px;
   margin-bottom: 30px;
 }
@@ -317,7 +282,7 @@ p {
 }
 
 .projects-title {
-  padding-top: 4px;
+  margin-bottom: 4px;
 
   color: var(--title-text-color);
   font-weight: 700;
@@ -331,39 +296,10 @@ p {
   line-height: 1.87;
 }
 
-.feature-box {
-  display: flex;
-  flex-wrap: wrap;
-}
-
-.feature-title {
-  padding-bottom: 10px;
-
-  color: var(--title-text-color);
-  font-weight: 700;
-  font-size: 14px;
-  line-height: 1.14;
-}
-
-/* .feature-list {
-  display: flex;
-} */
-
-.feature-text {
-  display: flex;
-  flex-wrap: wrap;
-  font-size: 14px;
-  line-height: 1.7;
-}
-
 /* work */
-.container.work {
-  padding-top: 0;
-  padding-bottom: 0;
-}
+
 .section-title {
-  display: block;
-  padding-bottom: 50px;
+  margin-bottom: 50px;
 
   color: var(--title-text-color);
   font-weight: 700;
@@ -372,13 +308,15 @@ p {
   text-align: center;
 }
 
+.work .container {
+  padding-top: 0px;
+}
+
 .work-cards {
   display: flex;
-  padding-bottom: 94px;
 }
 
 .work-item {
-  display: block;
   width: calc((100%-60px) / 3);
   margin-right: 30px;
   margin-bottom: 30px;
@@ -398,12 +336,10 @@ p {
 }
 
 .team-cards {
-  display: block;
   display: flex;
 }
 
 .team-item {
-  display: block;
   width: calc((100%-60px) / 4);
   margin-right: 30px;
   margin-bottom: 30px;
@@ -417,53 +353,44 @@ p {
   margin-bottom: 0px;
 }
 .title-el {
-  padding-bottom: 10px;
+  margin-bottom: 10px;
 
   color: var(--title-text-color);
   font-weight: 500;
   font-size: 16px;
   line-height: 1.19;
-  text-align: center;
 }
 
 .title-el-text {
   font-size: 16px;
   line-height: 1.19;
-  text-align: center;
 }
 
 .team-border {
-  display: block;
   border-radius: 0px 0px 4px 4px;
   padding-top: 30px;
   padding-bottom: 30px;
-  padding-left: auto;
-  padding-right: auto;
+  text-align: center;
 
   background: #ffffff;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
 }
 
-.team-img {
-  display: block;
-  max-width: 100%;
-  height: auto;
-}
-
 /* Button */
 .button {
-  color: var(--title-text-color);
   background-color: var(--button-background-color);
 
   font-family: inherit;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.6;
-  text-align: center;
   letter-spacing: 0.03em;
-  text-decoration: none;
   cursor: pointer;
+
+  border: transparent;
+  border-radius: 4px;
+  padding: 6px 22px;
 }
 
 .button:hover,
@@ -473,39 +400,49 @@ p {
 }
 
 /*  section footer */
-.footer.container {
+.footer {
+  padding-top: 60px;
+  padding-bottom: 60px;
+
+  background-color: var(--hero-background-color);
+}
+
+.footer > .container {
   padding-top: 0;
   padding-bottom: 0;
 }
 
-.footer {
-  background-color: var(--hero-background-color);
-}
-
 .footer-logo {
   display: block;
-  padding-top: 60px;
+
   margin-bottom: 20px;
-  /* outline: 2px solid red; */
-}
-.footer-item {
-  display: block;
-  padding-bottom: 60px;
+  margin-right: 0px;
 }
 
 .address {
   color: var(--primari-white-color);
+  margin-bottom: 9px;
 }
 
 .auth-nav-footer {
+  display: block;
+  color: var(--auth-nav-footer-color);
+  margin-bottom: 9px;
+}
+
+.tel-nav-footer {
+  display: block;
   color: var(--auth-nav-footer-color);
 }
 
-.auth-nav-footer:focus,
-.auth-nav-footer:hover {
+.auth-nav-footer:hover,
+:focus,
+.tel-nav-footer:hover,
+:focus {
   color: var(--accent-color);
 }
 
+.tel-nav-footer,
 .auth-nav-footer,
 .address {
   font-family: Roboto;
@@ -514,5 +451,4 @@ p {
   font-size: 14px;
   line-height: 1.7;
   letter-spacing: 0.03em;
-  text-decoration: none;
 }
