--- a/css/styles.css
+++ b/css/styles.css
@@ -64,11 +64,15 @@ img {
   width: 1200px;
   padding-left: 15px;
   padding-right: 15px;
-  padding-top: 94px;
-  padding-bottom: 94px;
   margin-left: auto;
   margin-right: auto;
 }
+
+.section {
+  padding-top: 94px;
+  padding-bottom: 94px;
+}
+
 .hidden {
   position: absolute;
   clip: rect(0 0 0 0);
@@ -281,6 +285,10 @@ img {
   margin-bottom: 0px;
 }
 
+.projects-link {
+  display: block;
+}
+
 .projects-title {
   margin-bottom: 4px;
 
@@ -308,7 +316,7 @@ img {
   text-align: center;
 }
 
-.work .container {
+.section-work {
   padding-top: 0px;
 }
 
@@ -421,6 +429,9 @@ img {
 
 .address {
   color: var(--primari-white-color);
+  margin-bottom: 9px;
+}
+.address-nav:not(:last-child) {
   margin-bottom: 9px;
 }
 
